# pair_feature_colored_icp

./: CMakeLists.txt  README.md
src/: icp_feature_registration.cpp  visualize_correspondences.cpp  visualize_correspondences.h
